# VT_labs_2

./: README.md  TODO  build.xml  headers  jsScript.js  logs  page.html  params.props  report  report.tex  scriptik.sh  sia #1.docx  sia #2.docx  tasks  test
HttpUnit/src/: Main.java
VT_labs_2-Web-Programming_3/: README.md  helios.bind  helios.test
VT_labs_2-Web-Programming_3/alaba3/: pom.xml
alaba3/: pom.xml  todo
alaba4/: Dockerfile  build-docker.sh  pom.xml  run-docker.sh  start-docker.sh  stop-docker.sh  todo
charts/: CMakeLists.txt  main.cpp
css/: buttons.css  custom-checkboxes.css  dark.css  light.css
css/dark/: buttons.css  main.css
css/light/: buttons.css  custom-checkboxes.css
docker/: run-docker.sh  start.sh  stop.sh
front/: package-lock.json  package.json
front/AccountOwnerClient/: README.md  index.html  package-lock.json  package.json
front/src/: index.js
front/src/scripts/: auth.js  main.js
js/: dynamic_R_value.js  theme_changer.js  validate_and_submit.js
lab4/: pom.xml
lab_1/: pom.xml
php/: check.php  script.php
program/: ex  pom.xml  test
release/: check.php  history  page.html  script.php  valid.js  validate_and_submit.js
repo/db/: rep-cache.db  uuid
repo/workspace/: .ant-targets-build.xml  build.properties  build.xml  diff.txt
repo/workspace/.svn/: wc.db
report/: report.tex
report/src/: build.xml  main.bib  main.tex
report/tex/: front_page.tex  main_page.tex
serv/: pom.xml
server/src/: AreaCheckServlet.java  ControllerServlet.java
server/web/: page.jsp
tex/: front_page.tex  main_page.tex
(+189 files in other folders)
